--- a/config/V3-min2/style.css
+++ b/config/V3-min2/style.css
@@ -117,7 +117,7 @@ opacity: 0.95;
 #custom-weather, #memory, #mpris, #window,
 #hyprland-window,
 #tray,
-#cava,
+#custom-cava,
 #cpu,
 #battery,
 #network,
@@ -171,7 +171,7 @@ tooltip {
     background-color: @transparent;
 }
 
-#cava {
+#custom-cava {
   padding: 0 5px;
   background-color: @background;
   margin: 2px 4px 4px 4px;
