--- a/config/V3-min/style.css
+++ b/config/V3-min/style.css
@@ -15,9 +15,7 @@
 window#waybar  {
   background-color: @background;
   color: @foreground;
-  /* border-top: 1px solid alpha(@foreground, 0.9); */
   border-bottom: 2px solid alpha(@foreground, 0.9);
-  /* border-radius: 0 0 10 10; */
   transition-property: background-color;
   transition-duration: .5s;
   border: 2px solid alpha(@foreground, 0.75);
@@ -42,7 +40,7 @@ font-size: 16px;
  margin-left: 0px;
  margin: 0;
  padding: 1.5px 0 1.5px;
- text-shadow: 0px 0px 2px alpha(@foreground, 0.8);
+ text-shadow: 0px 0px 2px alpha(@foreground, 0.6);
 
 }
 .modules-center {
@@ -56,7 +54,7 @@ font-size: 16px;
 .modules-right {
   padding-top: 0px;
   margin-right: 2px;
-  text-shadow: 0px 0px 2px alpha(@foreground, 0.8);
+  text-shadow: 0px 0px 2px alpha(@foreground, 0.6);
 }
 
 #workspaces {
@@ -117,7 +115,7 @@ font-size: 16px;
 #custom-screenrecording-indicator,
 #custom-update {
   min-width: 12px;
-  margin: 0 7.5px;
+  margin: 0 6.5px;
 }
 
 tooltip {
@@ -128,52 +126,94 @@ tooltip {
   font-size: 10px;
 }
 
-#window, #hyprland-window {
-  margin: 0;
+#idle_inhibitor, #clock, #custom-update, #custom-screenrecording-indicator {
+  margin: 0 5px;
 }
-
 
 .hidden {
   opacity: 0;
 }
 
-#tray, #custom-updatespacman, #network, #pulseaudio, #battery {
-  margin: 0 5px;
+
+
+tooltip {
+ padding: 4px;
+ background: @background;
+ font-size: 10px;
+ border: 1px solid alpha(@foreground, 0.8);
+ border-radius: 8px;
+ box-shadow: 1px 1px 3px 1px #131313;
+}
+tooltip label {
+    color: @foreground;
+    font-weight: normal;
+}
+
+/* Specific animation Module */
+
+#custom-screenrecording-indicator {
+    font-size: 12px;
+    padding: 0px;
+    margin: 2px;
 }
 
 #custom-screenrecording-indicator {
-  min-width: 12px;
-  margin-left: 8.75px;
-  font-size: 10px;
-
-  padding: 0 11 0 10;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+  color: transparent;
 }
 
 #custom-screenrecording-indicator.active {
-  color: #a55555;
+  color: #eb7087;
+  animation-name: blink-recording;
+  animation-duration: 0.5s;
+}
+
+@keyframes blink-recording {
+    to {
+        color: @background;
+    }
 }
 
 
-/* EXTRA FIX! */
 
+@keyframes blink {
+    to {
+        color: #4a4a4a;
+        
+    }
+}
 
-
-#mpris {
-  margin-right: 4px;
+@keyframes blink-inhibitor {
+    to {
+        color: @background;
+    }
 }
 
 #idle_inhibitor {
-  margin-right: 1px;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+  color: @foreground;
+ }
+
+#idle_inhibitor.activated {
+  color: #178b76;
+  animation-name: blink-inhibitor;
+  animation-duration: 1s;
 }
 
-tooltip {
-    background-color: alpha(@background, 1);
-    border: 2px solid alpha(@foreground, 0.5);
-    border-radius: 8px;
-    box-shadow: 1px 3px 1px alpha(@background, 0.3);
-    padding: 4px;
-}
-
-tooltip label {
-    color: @foreground;
+#mpris {
+color: @foreground;
+font-size: 10px;
+padding-top: 0px;
+margin-left: 4px;
+margin-right: 1px;
+animation: repeat;
+	animation-name: blink;
+	animation-duration: 3s;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
 }
