Update button styles in style.css

--- a/config/V4.4/style.css
+++ b/config/V4.4/style.css
@@ -106,7 +106,10 @@ tooltip {
   background: linear-gradient(180deg, @background 75%, @foreground);
 }
 
-
+#workspaces button.empty.active {
+  background-color: @foreground;
+  color: @background;
+}
 
 #custom-omarchy {
   padding: 1px 0 1px;
