--- a/config/V2.5/style.css
+++ b/config/V2.5/style.css
@@ -13,7 +13,7 @@ tooltip {
 
 window#waybar {
   background-color: #131315;
-  color: @foreground;
+  color: #e6d8ba;
   border-radius: 10px;
 }
 
@@ -43,16 +43,27 @@ window#waybar.empty #window{
   margin-left: 0px;
 }
 
+button {
+  box-shadow: inset 0 -3px transparent;
+  border: none;
+  border-radius: 0;
+  transition: 0.15s ease-in-out;
+}
+
+button:hover {
+  background: inherit;
+}
+
 #workspaces button {
   padding: 0 5px;
   background-color: transparent;
-  color: @foreground;
+  color: #e6d8ba;
   border-radius: 5px;
   transition: 0.15s ease-in-out;
 }
 
 #workspaces button:hover {
-  background: @foreground;
+  background: #3f3f46;
   color: #000;
 }
 
@@ -62,13 +73,13 @@ window#waybar.empty #window{
 }
 
 #workspaces button.empty {
-  color: alpha(@foreground, 0.4);
+  color: alpha(#e6d8ba, 0.4);
   opacity: 0.45;
   transition: all 0.15s ease-in-out;
 }
 
 #workspaces button.empty.active {
-  background-color: @foreground;
+  background-color: #e6d8ba;
   color: #000;
 }
 
@@ -88,7 +99,7 @@ window#waybar.empty #window{
 #custom-updatespacman,
 #custom-screenrecording-indicator {
   padding: 0 8px;
-  color: @foreground;
+  color: #e6d8ba;
   margin: 5px 5px 5px 0;
 }
 
@@ -102,12 +113,12 @@ background-color: #27272a;
 
 #battery {
   background-color: #27272a;
-  color: @foreground;
+  color: #e6d8ba;
 }
 
 #backlight {
   background-color: #27272a;
-  color: @foreground;
+  color: #e6d8ba;
 }
 
 #power-profiles-daemon.performance {
@@ -117,22 +128,22 @@ background-color: #27272a;
 
 #power-profiles-daemon.balanced {
   background-color: #27272a;
-  color: @foreground;
+  color: #e6d8ba;
 }
 
 #power-profiles-daemon.power-saver {
   background-color: #27272a;
-  color: @foreground;
+  color: #e6d8ba;
 }
 
 #cpu {
   background-color: #27272a;
-  color: @foreground;
+  color: #e6d8ba;
 }
 
 #mpris {
   background-color: #27272a;
-  color: @foreground;
+  color: #e6d8ba;
 }
 
 #network {
@@ -155,7 +166,7 @@ background-color: #27272a;
 
 #pulseaudio {
   background-color: #27272a;
-  color: @foreground;
+  color: #e6d8ba;
 }
 
 #pulseaudio.muted {
@@ -220,7 +231,7 @@ tooltip label {
   animation-timing-function: linear;
   animation-iteration-count: infinite;
   animation-direction: alternate;
-  color: @foreground;
+  color: #e6d8ba;
  }
 
 #idle_inhibitor.activated {
@@ -230,7 +241,7 @@ tooltip label {
 }
 
 #mpris {
-color: @foreground;
+color: #e6d8ba;
 font-size: 13px;
 padding-top: 1px;
 margin-right: 0px;
