Add margin to multiple elements in style.css

--- a/config/V6/style.css
+++ b/config/V6/style.css
@@ -132,6 +132,10 @@ tooltip {
   font-size: 10px;
 }
 
+#idle_inhibitor, #clock, #custom-update, #custom-screenrecording-indicator {
+  margin: 0 5px;
+}
+
 #window, #hyprland-window {
   margin: 0;
 }
