--- a/config/v2/style.css
+++ b/config/v2/style.css
@@ -235,8 +235,8 @@ tooltip label {
 }
 
 #mpris {
-background-color: #3c3836;
-color: #ebdbb2;
+    background-color: #d65d0e;
+    color: #282828;
 animation: repeat;
 	animation-name: blink;
 	animation-duration: 3s;
@@ -247,7 +247,7 @@ animation: repeat;
 
 @keyframes blink {
     to {
-        color: #4a4a4a;
+        color: #665c54;
         
     }
 }
