--- a/config/V6/style.css
+++ b/config/V6/style.css
@@ -28,9 +28,6 @@ window#waybar  {
 
 #window {
   text-shadow: 0px 0px 2px alpha(@foreground, 0.4);
-  margin: 0;
-  padding: 0;
-  padding-top: 0px;
 }
 
 #custom-omarchy {
@@ -38,23 +35,16 @@ font-size: 14px;
 }
 
 .modules-left {
- margin-left: 8px;
- text-shadow: 0px 0px 2px alpha(@foreground, 0.4);
-
+margin-left: 8px;
 }
 .modules-center {
   border-radius: 0;
+  padding:0 10px;
   border-left: 1px solid alpha(@foreground, 0.2);
   border-right: 1px solid alpha(@foreground, 0.2);
-  text-shadow: 0px 0px 2px alpha(@foreground, 0.4);
-  padding: 0 10px;
-  padding-top: 0px;
 }
 .modules-right {
-  padding-top: 0px;
   margin-right: 8px;
-  text-shadow: 0px 0px 2px alpha(@foreground, 0.4);
-
 }
 
 #workspaces {
@@ -88,24 +78,19 @@ font-size: 14px;
     opacity: 0.45;
 }
 
+
 #workspaces button label {
     font-size: 0px;
-}
-
-#workspaces button {
-    /* margin-top: 1px; */
-    /* margin-bottom: -1px; */
-    font-size: 12.5px;
-    background: @foreground;
-    font-weight: 800;
 }
 
 
 #memory,
 #mpris,
+#custom-expand-icon,
 #hyprland-window,
 #tray,
 #cpu,
+#clock,
 #battery,
 #backlight,
 #network,
@@ -117,27 +102,16 @@ font-size: 14px;
 #custom-screenrecording-indicator,
 #custom-update {
   min-width: 12px;
-  margin: 0 7.5px;
+  padding: 0 4px;
+  margin: 1px 3px 1px 3px;
 }
 
 #custom-expand-icon {
-  margin-right: 2px;
+  margin-right: 0px;
 }
 
 tooltip {
   padding: 2px;
-}
-
-#custom-update {
-  font-size: 10px;
-}
-
-#idle_inhibitor, #clock, #custom-update, #custom-screenrecording-indicator {
-  margin: 0 5px;
-}
-
-#window, #hyprland-window {
-  margin: 0;
 }
 
 
@@ -159,11 +133,6 @@ tooltip label {
 
 /* Specific animation Module */
 
-#custom-screenrecording-indicator {
-    font-size: 12px;
-    padding: 0px;
-    margin: 2px;
-}
 
 #custom-screenrecording-indicator {
   animation-timing-function: linear;
@@ -218,4 +187,25 @@ animation: repeat;
         color: #4a4a4a;
         
     }
+}
+
+#battery.warning {
+  color: #c95d0f;
+}
+
+@keyframes blink2 {
+  to {
+    background-color: transparent;
+    color: #f53c3c;
+  }
+}
+
+#battery.critical:not(.charging) {
+  background-color: transparent;
+  color: #e6d8ba;
+  animation-name: blink2;
+  animation-duration: 0.5s;
+  animation-timing-function: steps(12);
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
 }
