--- a/config/V1.5/style.css
+++ b/config/V1.5/style.css
@@ -42,7 +42,25 @@ window#waybar.empty #window {
   padding: 0px;
  }
 
-.modules-right {
+#right {
+  margin-right: 5px;
+  background: @bg;
+  box-shadow: 1px 1px 3px 0px @ia1;
+  border-radius: 2px;
+  margin: 4px 8px 6px 0px;
+  padding: 0px;
+}
+
+#right1 {
+  margin-right: 5px;
+  background: @bg;
+  box-shadow: 1px 1px 3px 0px @ia1;
+  border-radius: 2px;
+  margin: 4px 8px 6px 0px;
+  padding: 0px;
+}
+
+#right2 {
   margin-right: 5px;
   background: @bg;
   box-shadow: 1px 1px 3px 0px @ia1;
@@ -123,19 +141,12 @@ window#waybar.empty #window {
   color: @fg;
 }
 
-#mpris {
-  padding: 0 5px;
-  background-color: @bg;
-  border-radius: 2px;
-  box-shadow: inset 0 -3px transparent;
-  margin: 1px 8px 2px 0px;
-  color: @fg;
-}
 
 /* --- General Modules --- */
 
-#tray,
 #cava,
+#mpris,
+#tray,
 #memory,
 #cpu,
 #battery,
@@ -187,12 +198,7 @@ tooltip label {
 
 /* Specific Module */
 
-#tray-expander {
-  padding: 0 5px;
-  background: @transparent;
-  color: @fg;
-  border-radius: 1px;
-}
+
 
 .hidden {
   opacity: 0;
@@ -213,6 +219,7 @@ tooltip label {
 
 #custom-screenrecording-indicator.active {
   color: #eb7087;
+  background-color: @bg;
   animation-name: blink-recording;
   animation-duration: 0.5s;
 }
@@ -225,18 +232,18 @@ tooltip label {
 
 #battery.warning {
   color: #c95d0f;
-   background-color: transparent;
+   background-color: @bg;
 }
 
 @keyframes blink2 {
   to {
-    background-color: transparent;
+    background-color: @bg;
     color: #f53c3c;
   }
 }
 
 #battery.critical:not(.charging) {
-  background-color: transparent;
+  background-color: @bg;
   color: #e6d8ba;
   animation-name: blink2;
   animation-duration: 0.5s;
