Update tooltip border style in style.css

--- a/config/V2.1a/style.css
+++ b/config/V2.1a/style.css
@@ -163,7 +163,7 @@ tooltip {
  padding: 4px;
  background: @background;
  font-size: 10px;
- border: 1px solid alpha(@foreground, 0.8);
+ border: 2px solid @border-active;
  border-radius: 8px;
 }
 tooltip label {
