Remove styles for #custom-update
Removed styles for the custom update element.

--- a/config/V2.1a/style.css
+++ b/config/V2.1a/style.css
@@ -102,6 +102,7 @@
 #group-tray-expander,
 #custom-windowpill,
 #custom-expand-icon,
+#custom-update,
 #custom-omarchy,
 #custom-omarchy-theme-set,
 #custom-colorpicker,
@@ -146,11 +147,6 @@ tooltip {
 #group-tray-expander {
   background-color: @background;
   color: @foreground;
-}
-
-#custom-update {
-  padding: 0 4px;
-  margin: 0 0 0 7.5px;
 }
 
 #custom-windowpill {
