--- a/config/V1.5/style.css
+++ b/config/V1.5/style.css
@@ -189,6 +189,15 @@ tooltip label {
     font-weight: normal;
 }
 
+#custom-voxtype {
+  min-width: 12px;
+  margin: 0 0 0 7.5px;
+}
+
+#custom-voxtype.recording {
+  color: #a55555;
+}
+
 
 /* Specific Module */
 
