--- a/config/V1/style.css
+++ b/config/V1/style.css
@@ -188,6 +188,9 @@ tooltip label {
   margin: 0 0 0 7.5px;
 }
 
+#custom-voxtype.recording {
+  color: #a55555;
+}
 /* Specific Module */
 
 #tray-expander {
