--- a/config/V2.1/style.css
+++ b/config/V2.1/style.css
@@ -200,6 +200,15 @@ tooltip {
   color: @muted;
 }
 
+#custom-voxtype {
+  min-width: 12px;
+  margin: 0 0 0 7.5px;
+}
+
+#custom-voxtype.recording {
+  color: #a55555;
+}
+
 /* Specific Module */
 
 #tray > .needs-attention {
