--- a/config/V2.3/style.css
+++ b/config/V2.3/style.css
@@ -196,7 +196,14 @@ tooltip label {
     font-weight: normal;
 }
 
+#custom-voxtype {
+  min-width: 12px;
+  margin: 0 0 0 7.5px;
+}
 
+#custom-voxtype.recording {
+  color: #a55555;
+}
 
 
 /* Specific animation Module */
