--- a/config/V2.6/style.css
+++ b/config/V2.6/style.css
@@ -194,6 +194,14 @@ font-size: 14px;
 margin-top: 0px;
 }
 
+#custom-voxtype {
+  min-width: 12px;
+  margin: 0 0 0 2.5px;
+}
+
+#custom-voxtype.recording {
+  color: #a55555;
+}
 
 /* Specific animation Module */
 #mpris {
